logs/sapphire.log
Listing '.'...
Listing './bin'...
Compiling './bin/bin2hex.py'...
Compiling './bin/hex2bin.py'...
Compiling './bin/hex2dump.py'...
Compiling './bin/hexdiff.py'...
Compiling './bin/hexinfo.py'...
Compiling './bin/hexmerge.py'...
Compiling './bin/miniterm.py'...
Compiling './bin/sapphireconsole.py'...
***   File "./bin/sapphireconsole.py", line 120
    print "Found %d devices" % (len(devices))
                           ^
SyntaxError: invalid syntax

Compiling './bin/sapphiremake.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyDispatcher-2.0.5-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/appdirs-1.4.3.dist-info'...
Listing './lib/python3.5/site-packages/bitstring-3.1.5-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.6.dist-info'...
Listing './lib/python3.5/site-packages/cmd2-0.6.9-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/crcmod'...
Listing './lib/python3.5/site-packages/crcmod-1.7-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/intelhex'...
Listing './lib/python3.5/site-packages/intelhex-2.1.dist-info'...
Listing './lib/python3.5/site-packages/packaging'...
Listing './lib/python3.5/site-packages/packaging-16.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pydispatch'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.2.1.dist-info'...
Listing './lib/python3.5/site-packages/sapphire'...
Listing './lib/python3.5/site-packages/sapphire/buildtools'...
Compiling './lib/python3.5/site-packages/sapphire/buildtools/core.py'...
***   File "./lib/python3.5/site-packages/sapphire/buildtools/core.py", line 1026
    print "%20s %s" % (key, projects[key])
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sapphire/buildtools/project_template'...
Listing './lib/python3.5/site-packages/sapphire/common'...
Compiling './lib/python3.5/site-packages/sapphire/common/fnmatch2.py'...
***   File "./lib/python3.5/site-packages/sapphire/common/fnmatch2.py", line 74
    print elapsed * 1000.0
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/common/ribbon.py'...
***   File "./lib/python3.5/site-packages/sapphire/common/ribbon.py", line 246
    print self.stuff
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sapphire/devices'...
Compiling './lib/python3.5/site-packages/sapphire/devices/channel.py'...
***   File "./lib/python3.5/site-packages/sapphire/devices/channel.py", line 213
    print "read header error"
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/devices/device.py'...
***   File "./lib/python3.5/site-packages/sapphire/devices/device.py", line 244
    print "DuplicateKeyNameException: %s" % (key)
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/sapphire/devices/gateway.py'...
***   File "./lib/python3.5/site-packages/sapphire/devices/gateway.py", line 125
    print e
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/devices/sapphiredata.py'...
***   File "./lib/python3.5/site-packages/sapphire/devices/sapphiredata.py", line 186
    print "ERROR:", self.type
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sapphire/fields'...
Compiling './lib/python3.5/site-packages/sapphire/fields/fields.py'...
***   File "./lib/python3.5/site-packages/sapphire/fields/fields.py", line 828
    print i
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sapphire/keyvalue'...
Compiling './lib/python3.5/site-packages/sapphire/keyvalue/influx_test.py'...
***   File "./lib/python3.5/site-packages/sapphire/keyvalue/influx_test.py", line 31
    print json_body
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/keyvalue/slight.py'...
***   File "./lib/python3.5/site-packages/sapphire/keyvalue/slight.py", line 193
    print "ERROR:", self.type
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/keyvalue/slight_sniffer.py'...
***   File "./lib/python3.5/site-packages/sapphire/keyvalue/slight_sniffer.py", line 24
    print msg, host
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sapphire/keyvalue/test_service.py'...
***   File "./lib/python3.5/site-packages/sapphire/keyvalue/test_service.py", line 57
    print kv1['thing']
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sapphire/query'...
Listing './lib/python3.5/site-packages/sapphire/udpx'...
Compiling './lib/python3.5/site-packages/sapphire/udpx/udpx.py'...
***   File "./lib/python3.5/site-packages/sapphire/udpx/udpx.py", line 472
    print c.recvfrom()
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sapphire-0.5.53-py3.5.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools-34.2.0.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
